# mypytools

./: MANIFEST.in  README.md  mytools.py  precommit.sh  pyproject.toml  setup.py
mytools/: __init__.py  gnss.py  kalysto.py  pathevents.py  showgfm.html  showgfm.py
tests/: test_gnss.py  test_pathevents.py  test_tools.py
