[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mytools"
version = "0.3"
description = "Sam Mason's Python tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Sam Mason", email = "sam@samason.uk"},
]

[project.optional-dependencies]
all = ["aiohttp", "cmarkgfm", "nh3", "watchdog"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/smason/mypytools/"

[project.scripts]
showgfm = "mytools.showgfm:main"
kalysto = "mytools.kalysto:main"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
log_cli = "1"
log_cli_date_format = "%H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
